2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.c: Remove debugging cruft.
	(capplet_init): Check for legacy with --init-session-settings too.

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.[ch] (capplet_init): New argument of legacy files to
	check for changes.

	* capplet-util.c (legacy_is_modified): New function that checks
	a legacy file against the archiver modification date.
	(capplet_init): Pass legacy_files to legacy_is_modified, and sync
	our database with the legacy one if one has been.

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (real_quit_cb): Reenable disabled code
	(quit_cb): Put the db an id objects in a pair structure and pass
	that to the callback
	(real_quit_cb): Extract the db and id objects from the pair
	(create_control_cb): Set up listener for sync event rather than
	change event

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (set_moniker_cb): Set InvalidValue exception if
	the program could not resolve the moniker

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.c (quit_cb): Add an idle handler to call the real
	quit cb.
	(real_quit_cb): Added, it is what quit_cb used to be.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (create_control_cb): Use a static variable for
	the control and return NULL if the control was already created

2001-07-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (create_control_cb): Store listener id in
	property control
	(quit_cb): Remove listener before releasing database
	(set_moniker_cb): Kill any existing db object in case the moniker
	is set more than once
	(set_moniker_cb): Connect destroy signal on pf to pf_destroy_cb
	(pf_destroy_cb): Implement

2001-07-18  Richard Hestilow  <hestilow@ximian.com>
	
	* capplet-util.[ch]: Revert my last proxy-related change.
